Deprecate Manager.distributable and Manager.maxInactiveInterval since they exist in both the Context and the Manager and the Context values always take precedence.
git-svn-id: https://svn.apache.org/repos/asf/tomcat/tc6.0.x/trunk@1727170 13f79535-47bb-0310-9956-ffa450edef68